# PageToText

./: .gitignore  LICENSE.txt  README.md  main.py  output.txt  pyproject.toml  requirements.txt
