[tool.poetry]
name = "pagetotext"
version = "0.1.0"
description = ""
authors = ["SoSaymon <szymon.chirowski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.3"
spire-pdf = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
